scrolls helper class added + add old history sessions on scrol up added + chat scroll fixed value by offset when dragging with mouse on scrollbar thumb + migrated from list sessions to linkedHashMap to check for already added sessions

--- a/src/main/resources/logged-first.css
+++ b/src/main/resources/logged-first.css
@@ -154,10 +154,20 @@ TextFlow {
     -fx-padding: 8 65 0 40;
 }
 .session-date{
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,1.6) , 1, 0.0 , 0 , 0 );
     -fx-padding: 10 0 15 15;
 }
 .session-info{
+    -fx-opacity: 0.7;
     -fx-padding: 10 0 0 15;
+}
+
+.session-info Pane{
+    -fx-background-color: #bcbcbc;
+}
+.session-info TextFlow{
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0) , 0, 0.0 , 0 , 0 );
+    -fx-background-insets: 0 0 0 0;
 }
 .session-info Text{
     -fx-fill: #bcbcbc;
@@ -165,5 +175,4 @@ TextFlow {
 .session-date Text{
     -fx-fill: #bcbcbc;
 }
-
 
